--- a/web/appraisal/templates/appraisal/main.html
+++ b/web/appraisal/templates/appraisal/main.html
@@ -13,6 +13,8 @@
 
 {% block content %}
 
+  <div id="appraisal_data" data-appraisal_id="{{appraisal.id}}"></div>
+
   <nav class="navbar justify-content-between">
     <!--<a class="navbar-brand" href="#">-->
     <h4>
