--- a/web/appraisal/templates/appraisal/value/value_market_properties.html
+++ b/web/appraisal/templates/appraisal/value/value_market_properties.html
@@ -16,7 +16,7 @@
     
     <div class="alert alert-light ml-3 mr-3 mt-4" role="alert">
       <h4 class="alert-heading">No existen referencias</h4>
-      <p>Probablemente no se han ingresado suficientes datos para obtener propiedades similares</p>
+      <p>Probablemente no se han ingresado suficientes datos para obtener propiedades comparables</p>
     </div>
     
     {% else %}
