--- a/web/appraisal/templates/appraisal/main.html
+++ b/web/appraisal/templates/appraisal/main.html
@@ -6,9 +6,11 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'appraisal/css/app.css' %}">
 <link rel="stylesheet" href="{% static 'appraisal/css/sidebar.css' %}">
+<link rel="stylesheet" href="{% static 'appraisal/css/value.css' %}">
 <link rel="stylesheet" href="{% static 'list/css/logbook.css' %}">
 <script src="{% static "list/js/modal_assign_tasador.js" %}" type="text/javascript"></script>
 <script src="{% static "list/js/tools.js" %}" type="text/javascript"></script>
+<script src="{% static "appraisal/js/value_comparable.js" %}" type="text/javascript"></script>
 {% endblock head %}
 
 {% block content %}
@@ -86,32 +88,32 @@
 
         <ul class="nav nav-tabs card-header-tabs" role="tablist" id="myTab" >
           <li class="nav-item">
-            <a class="{{request.GET.tab|tab_nav_class:"general"}}" id="general-tab" data-toggle="tab" href="#general" role="tab" aria-controls="general" aria-selected="{{request.GET.tab|tab_nav_aria_selected:"general"}}">
+            <a class="{{request.GET.tab|tab_nav_class:"general"}}" id="general-tab" data-toggle="tab" href="#general">
               Aspectos generales
             </a>
           </li>
           <li class="nav-item">
-            <a class="{{request.GET.tab|tab_nav_class:"property"}}" id="property-tab" data-toggle="tab" href="#property" role="tab" aria-controls="property" aria-selected="{{request.GET.tab|tab_nav_aria_selected:"property"}}">
+            <a class="{{request.GET.tab|tab_nav_class:"property"}}" id="property-tab" data-toggle="tab" href="#property">
               Propiedad(es)
             </a>
           </li>
           <li class="nav-item">
-            <a class="{{request.GET.tab|tab_nav_class:"surroundings"}}" id="surroundings-tab" data-toggle="tab" href="#surroundings" role="tab" aria-controls="surroundings" aria-selected="{{request.GET.tab|tab_nav_aria_selected:"surroundings"}}">
+            <a class="{{request.GET.tab|tab_nav_class:"surroundings"}}" id="surroundings-tab" data-toggle="tab" href="#surroundings">
               Entorno
             </a>
           </li>
           <li class="nav-item">
-            <a id="tab_value" class="{{request.GET.tab|tab_nav_class:"value"}}" id="value-tab" data-toggle="tab" href="#value" role="tab" aria-controls="value" aria-selected="{{request.GET.tab|tab_nav_aria_selected:"value"}}">
+            <a id="tab_value" class="{{request.GET.tab|tab_nav_class:"value"}}" id="value-tab" data-toggle="tab" href="#value">
               Valoración
             </a>
           </li>
           <li class="nav-item">
-            <a class="{{request.GET.tab|tab_nav_class:"annex"}}" id="annex-tab" data-toggle="tab" href="#annex" role="tab" aria-controls="annex" aria-selected="{{request.GET.tab|tab_nav_aria_selected:"annex"}}">
+            <a class="{{request.GET.tab|tab_nav_class:"annex"}}" id="annex-tab" data-toggle="tab" href="#annex">
               Anexos
             </a>
           </li>
           <li class="nav-item">
-            <a class="{{request.GET.tab|tab_nav_class:"logbook"}}" id="logbook-tab" data-toggle="tab" href="#logbook" role="tab" aria-controls="logbook" aria-selected="{{request.GET.tab|tab_nav_aria_selected:"logbook"}}">
+            <a class="{{request.GET.tab|tab_nav_class:"logbook"}}" id="logbook-tab" data-toggle="tab" href="#logbook">
               Bitácora
             </a>
           </li>
@@ -121,22 +123,22 @@
 
       <div class="tab-content" id="myTabContent">
 
-        <div class="{{request.GET.tab|tab_pane_class:"general"}}" id="general" role="tabpanel" aria-labelledby="general-tab">
+        <div class="{{request.GET.tab|tab_pane_class:"general"}}" id="general">
           {% include "appraisal/general.html" %}
         </div>
-        <div class="{{request.GET.tab|tab_pane_class:"property"}}" id="property" role="tabpanel" aria-labelledby="property-tab">
+        <div class="{{request.GET.tab|tab_pane_class:"property"}}" id="property">
           {% include "appraisal/properties/index.html" %}
         </div>
-        <div class="{{request.GET.tab|tab_pane_class:"surroundings"}}" id="surroundings" role="tabpanel" aria-labelledby="surroundings-tab">
+        <div class="{{request.GET.tab|tab_pane_class:"surroundings"}}" id="surroundings">
           {% include "appraisal/surroundings.html" %}
         </div>
-        <div class="{{request.GET.tab|tab_pane_class:"value"}}" id="value" role="tabpanel" aria-labelledby="value-tab">
-          {% include "appraisal/value.html" %}
+        <div class="{{request.GET.tab|tab_pane_class:"value"}}" id="value">
+          {% include "appraisal/value/index.html" %}
         </div>
-        <div class="{{request.GET.tab|tab_pane_class:"annex"}}" id="annex" role="tabpanel" aria-labelledby="annex-tab">
+        <div class="{{request.GET.tab|tab_pane_class:"annex"}}" id="annex">
           {% include "appraisal/annex.html" %}
         </div>
-        <div class="{{request.GET.tab|tab_pane_class:"logbook"}}" id="logbook" role="tabpanel" aria-labelledby="logbook-tab">
+        <div class="{{request.GET.tab|tab_pane_class:"logbook"}}" id="logbook">
           {% include "appraisal/logbook.html" %}
         </div>
 
@@ -162,21 +164,22 @@
 
   $("#tab_value").click(function(e) {
     var appraisal_id = {{appraisal.id}};
-    var url = "{% url 'ajax_load_tab_value' %}";
     var data = {'appraisal_id':appraisal_id};
+    var url = "{% url 'ajax_load_tab_value_comparable_url' %}";
+    console.log(url)
     $.ajax({
       url: url,
       type: 'get',
       data: data,
       error: function () {
-          alert("Error al cargar pestaña valor.");
+          alert("Error al cargar pestaña valor 1.");
           return false;
       },
       success: function (ret) {
-        $("#value").html($.trim(ret));
+        $("#value_comparable .body").html($.trim(ret));
       }
     });
-  })
+  }) 
 
   $('#myTab a').click(function(e) {
     e.preventDefault();
