--- a/web/appraisal/templates/appraisal/properties/sidebar/properties_list.html
+++ b/web/appraisal/templates/appraisal/properties/sidebar/properties_list.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="sidebar_title">
 	<div class="col-4">
 		<label>
 			Propiedades
@@ -11,6 +11,9 @@
 	</div>
 </div>
 
+<hr>
+
+<!--
 <div class="row text-center">
 	<div class="col-12">
 		<div class="form-check">
@@ -23,9 +26,11 @@
 		</div>
 	</div>
 </div>
+-->
 
-<div id="loading" style="display:none;">
-	<p> Loading </p>
+<div id="loading" style="display:none;text-align:center;">
+	<p>Cargando</p>
+	<div class="ld ld-ring ld-spin"></div>
 </div>
 
 <div id="list">
@@ -36,14 +41,16 @@
 	{% else %}
 		{% for real_estate, property_classes in app_properties.items %}
 			<div class="real_estate" data-real_estate_id="{{real_estate.id}}">
-				<p>{{real_estate.address_no_region}}</p>
-				{% for class_type, classes in property_classes.items %}
-					{% for class, properties in classes.items %}
-						<div class="list-group-item flex-column align-items-start building_list_item">
-							{% include "appraisal/properties/sidebar/properties_list_item.html" %}
-						</div>
+				<p class="real_estate_address">{{real_estate.address_no_region}}</p>
+				<div class="list-group list-group-flush">
+					{% for class_type, classes in property_classes.items %}
+						{% for class, properties in classes.items %}
+							<div class="list-group-item flex-column align-items-start property_list_item">
+								{% include "appraisal/properties/sidebar/properties_list_item.html" %}
+							</div>
+						{% endfor %}
 					{% endfor %}
-				{% endfor %}
+				</div>
 			</div>
 		{% endfor %}
 	{% endif %}
