--- a/web/appraisal/templates/appraisal/value/assets.html
+++ b/web/appraisal/templates/appraisal/value/assets.html
@@ -5,7 +5,7 @@
       <h5 style="margin:0em;">Valoración</h5>
     </div>
     <div class="col text-right">
-      <a class="btn" style="font-family:Material Icons;font-size:1em;margin-top:-1.0em;margin-bottom:-1.0em;" data-toggle="collapse" href="#avaluos" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+      <a class="btn" style="font-family:Material Icons;font-size:1em;margin-top:-1.0em;margin-bottom:-1.0em;" data-toggle="collapse" href="#avaluos" role="button">
         more_vert
       </a>
     </div>
