--- a/web/appraisal/templates/appraisal/value/comparable/selected_terrains.html
+++ b/web/appraisal/templates/appraisal/value/comparable/selected_terrains.html
@@ -1,7 +1,6 @@
 <table class="table table-sm table_selected_terrains mb-4 border-left border-right" data-id="{{terrain.id}}">
   <thead class="thead">
     <tr style="background: #eee;">
-      <!--<th scope="col">lat/lng</th>-->
       <th scope="col" style="width: 2em;"></th>
       <th scope="col" style="width: 2em;text-align:center;">#</th>
       <th scope="col" style="width: 25em;text-align:left;">Nombre / Dirección</th>
@@ -10,7 +9,7 @@
       <th scope="col" style="width: 12em;text-align:right;">Precio Mercado {{htmlBits.unitUF|safe}}</th>
       <th scope="col" style="width: 12em;text-align:right;">PM/m<sup>2</sup></th>
       <th scope="col" style="width: 18em;text-align:right;">
-        <a href="#" class="btn_similar_add_terrain_modal">
+        <a href="#" class="btn_comparable_add_terrain_modal">
           Agregar
         </a>
       </th>
@@ -69,13 +68,7 @@
 
     {% else %}
 
-    <tr class="border-bottom" style="background:#fff3cd;">
-      <td></td>
-        <td colspan="7" style="text-align:center;">
-          <small>No se han agregado propiedades similares</small>
-        </td>
-      <td></td>
-    </tr>
+      {% include 'appraisal/value/comparable/selected_tr_no_properties.html' %}
 
     {% endif %}
   </tbody>
