--- a/web/list/static/list/css/base.css
+++ b/web/list/static/list/css/base.css
@@ -124,3 +124,9 @@ button:focus {outline:0;}
 .navbar-brand {
   font-family: 'Open Sans'
 }
+
+.alert-warning {
+  color: #000000;
+  background-color: #fff9ca;
+  border-color: #a28325;
+}
