--- a/web/logbook/templates/logbook/modals_logbook.html
+++ b/web/logbook/templates/logbook/modals_logbook.html
@@ -14,7 +14,8 @@
   
 <div class="row mb-2">
   <div class="col-8">
-    <a href="{{appraisal.url}}">
+    <!--<a href="{{appraisal.url}}">-->
+    <a href="#">
       <p style="display:inline-block;vertical-align:-webkit-baseline-middle;margin-bottom:0em;">
         {{appraisal.real_estates.first.address}}
         {% if appraisal.real_estates.all|length > 1 %}
