--- a/web/appraisal/templates/appraisal/modals_add_property_similar.html
+++ b/web/appraisal/templates/appraisal/modals_add_property_similar.html
@@ -29,7 +29,7 @@
         <div class="tab-pane" id="sugeridas">
           <div class="row mt-4">
             <div class="col-12">
-
+              {% include 'appraisal/value_similar_realestate.html' %}
             </div>
           </div>
         </div> 
