--- a/web/list/templates/list/index.html
+++ b/web/list/templates/list/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="{% static 'list/css/logbook.css' %}">
   <link rel="stylesheet" href="{% static 'list/css/modals_expenses.css' %}">
   <link rel="stylesheet" href="{% static 'list/css/table_search.css' %}">
+  <link rel="stylesheet" href="{% static 'appraisal/css/modals.css' %}">
 {% endblock %}
 
 {% block content %}
